{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 34,
  "lineage": "781d619e-0deb-1044-0d1f-c7e1e3296c4f",
  "resources": [
    {
      "module": "module.aws_infra[\"ap-south-1a\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fe36427228eddc4",
            "arn": "arn:aws:ec2:ap-south-1:806819308050:instance/i-0b04af0a1f955543b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0450e8cd7fe7fa8c6",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b04af0a1f955543b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a36020e6f733e6a2",
            "private_dns": "ip-172-31-38-50.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.50",
            "public_dns": "ec2-13-232-202-34.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.202.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0480fd398f9a1ab4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ap-south-1a-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036a97e1d77254750",
            "tags": {
              "Name": "ec2-ap-south-1a"
            },
            "tags_all": {
              "Name": "ec2-ap-south-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec5baf200d155441"
            ]
          },
          "dependencies": [
            "module.aws_infra.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infra[\"ap-south-1a\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:806819308050:security-group/sg-0ec5baf200d155441",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ec5baf200d155441",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ap-south-1a-ec2-sg",
            "name_prefix": "",
            "owner_id": "806819308050",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b74535cd3ef86f1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_infra[\"ap-south-1b\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fe36427228eddc4",
            "arn": "arn:aws:ec2:ap-south-1:806819308050:instance/i-07e949827040a0d6e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08856f90430138cd4",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e949827040a0d6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5efa7f888ab0bd1",
            "private_dns": "ip-172-31-7-4.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.7.4",
            "public_dns": "ec2-65-2-69-27.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.69.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085c5e9a781ad031c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ap-south-1b-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062b54ae8a8bf3b6c",
            "tags": {
              "Name": "ec2-ap-south-1b"
            },
            "tags_all": {
              "Name": "ec2-ap-south-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b917c45bcc1d70b"
            ]
          },
          "dependencies": [
            "module.aws_infra.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infra[\"ap-south-1b\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:806819308050:security-group/sg-08b917c45bcc1d70b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-08b917c45bcc1d70b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ap-south-1b-ec2-sg",
            "name_prefix": "",
            "owner_id": "806819308050",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b74535cd3ef86f1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_infra[\"ap-south-1c\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:806819308050:security-group/sg-09ce5ab96006cf201",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-09ce5ab96006cf201",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ap-south-1c-ec2-sg",
            "name_prefix": "",
            "owner_id": "806819308050",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b74535cd3ef86f1"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}